Uploaded image for project: 'Kudu'
  1. Kudu
  2. KUDU-699

PeerManager::Close shouldn't block on requests

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Major
    • Resolution: Fixed
    • Private Beta
    • 1.3.0
    • consensus
    • None

    Description

      PeerManager::Close() currently blocks on any outstanding requests before proceeding. This can cause delays in a leader stepping down to become a replica, which also means it can delay vote responses and cause a slower (or flappy) election process.

      Attachments

        Issue Links

          Activity

            People

              tlipcon Todd Lipcon
              tlipcon Todd Lipcon
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: